<resources>
    <string name="app_name">I Delivery</string>

    <string name="order">Order</string>
    <string name="delivery">delivery NOW</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="picture">Picture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="total">Total</string>
    <string name="totalseeingmore">Toral :</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="comments">Comments</string>
    <string name="delet">Delet</string>
    <string name="noSize">No</string>
    <string name="cancel">Cancel</string>
    <string name="addanycomments">Do you want to add any comment about this item</string>


    <string name="see_more"> <u>See More</u>.</string>
    <string name="change">Change</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="yes_i_will_take_it">Yes i will take it</string>
    <string name="send">Send</string>
    <string name="cancelit">you can cancel it from inside</string>


    <string name="hello_world">Hello world!</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account"><u>No Account yet? Create new one</u>.</string>
    <string name="has_accoutn"><u>have Account? sign in Now!</u>.</string>
    <string name="advertisment">Android | Lollipop | Material | Yasir | Ameen | Login | Design | Activity | Blog | Facebook | Google | Kitkat | Marshmallow | Google</string>
    <string name="next_sign_up">Next</string>
    <string name="your_profile">Your profile</string>
    <string name="please_sign_in_now">Please Sign in now</string>

</resources>
